--- a/loan_prediction.html
+++ b/loan_prediction.html
@@ -14280,9 +14280,13 @@ a.anchor-link {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>LendingClub is a US peer-to-peer lending company, headquartered in San Francisco, California. It was the first peer-to-peer lender to register its offerings as securities with the Securities and Exchange Commission, and to offer loan trading on a secondary market. LendingClub is the world's largest peer-to-peer lending platform.</p>
-<p>Given historical data on loans given out with information on whether or not the borrower defaulted (charge-off), we can build a model that can predict if a borrower will pay back their loan. This way in the future when we get a new potential customer, we can assess if they are likely to pay back the loan.</p>
-<p>One of the objectives of this notebook is to show step-by-step how to visualize the dataset and assess whether or not a new customer is likely to pay back the loan.</p>
+<p>LendingClub is a US peer-to-peer lending company, headquartered in San Francisco, California. It was the first peer-to-peer lender to register its offerings as securities with the Securities and Exchange Commission, and to offer loan trading on a secondary market. LendingClub is the world's largest peer-to-peer lending platform, Given historical data on loans given out with information on whether or not the borrower defaulted (charge-off), we can build a model that can predict if a borrower will pay back their loan. This way in the future when we get a new potential customer, we can assess if they are likely to pay back the loan.</p>
+<p>Objectives of this notebook is:</p>
+<ul>
+<li>To show step-by-step how to visualize the dataset.</li>
+<li>Data cleaning and preprocessing.</li>
+<li>Assess whether or not a new customer is likely to pay back the loan.</li>
+</ul>
 
 </div>
 </div>
@@ -14359,9 +14363,9 @@ a.anchor-link {
 
 
 
-<div id="fd48f66f-b30c-4e60-a7de-6fddb3e512b0" class="jp-RenderedJavaScript jp-OutputArea-output " data-mime-type="application/javascript">
+<div id="97dfe6fb-69a2-4816-a217-eca81bd2d5ab" class="jp-RenderedJavaScript jp-OutputArea-output " data-mime-type="application/javascript">
 <script type="text/javascript">
-var element = document.getElementById('fd48f66f-b30c-4e60-a7de-6fddb3e512b0');
+var element = document.getElementById('97dfe6fb-69a2-4816-a217-eca81bd2d5ab');
 IPython.OutputArea.prototype._should_scroll = function(lines) {
     return false;
 }
@@ -18669,6 +18673,11 @@ dtype: int64</pre>
 
 </div>
 
+</div>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h2 id="Handle-Categorical-Features">Handle Categorical Features<a class="anchor-link" href="#Handle-Categorical-Features">&#182;</a></h2>
+</div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
@@ -18741,11 +18750,6 @@ dtype: int64</pre>
 
 </div>
 
-</div>
-<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Handle-Categorical-Features">Handle Categorical Features<a class="anchor-link" href="#Handle-Categorical-Features">&#182;</a></h2>
-</div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
